@@ -6,6 +6,8 @@ Revision 7:
 - Headless SDK update. See 'android -h update sdk' for more info.
 - Support for extension targets in Ant build to perform tasks between the
   normal tasks: -pre-build, -pre-compile, -post-compile.
+- Fixed location control in DDMS to work in any locale not using '.' as a
+  decimal point.
 
 
 Revision 6 (05/2010)
